# ziemlichwarmhier

./: .gitignore  README.md  SOURCES.md  llm_summary.md  plan.md  pyproject.toml
.github/workflows/: build-and-deploy-frontend-to-s3.yml  docker-build-job-update-10min-station-data.yml  docker-publish.yml  job-update-10min-station-data.yml  website-publish.yml
analysis/hyras/: extract_hyras_data.py  fetch_hyras_data.py
analysis/rolling_average/: calculate_rolling_average.py
analysis/stations/: extract_10min_station_data.py  extract_active_stations.py  fetch_daily_station_data.py  fetch_station_data.py  upload_to_s3.py
frontend/: copy-data.sh  package-lock.json  package.json
frontend/public/: active_stations_daily.csv  cities_metadata.csv  station_10min_data.csv  station_date_ranges.csv
frontend/src/: App.js  MapView.jsx
frontend/src/components/map/: CitiesOverlay.jsx  CityMarker.jsx  CityMarkerIcon.jsx  CityMarkerPopup.css  CityMarkerPopup.jsx  ControlPanel.jsx  EuropeBoundary.jsx  GermanyBoundary.jsx  GridItem.jsx  GridOverlay.jsx  MapView.css  MapView.jsx  StationInfoPanel.css  StationInfoPanel.jsx  StationMarker.css  StationMarker.jsx  StationMarkerIcon.jsx  StationSearch.css  StationSearch.jsx  StationsOverlay.jsx
frontend/src/services/: DataService.js
jobs/job-update-10min-station-data/: DOCKER_README.md  Dockerfile  entrypoint.sh
playground/: create_climate_animation.py  debug_netcdf.py  extract_hyras_climate_metrics.py  fetch_dwd_data.py  fetch_dwd_netcdf.py  station_date_ranges_to_csv.py
