[project]
name = "ziemlichwarmhier"
version = "0.1.0"
description = ""
authors = [
    {name = "Sebastian Fast",email = "s.fast@cognigy.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "xarray (>=2025.6.1,<2026.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
